Add contact info to right column

--- a/index.html
+++ b/index.html
@@ -8,10 +8,23 @@
 </head>
 
 <body>
-    <h1>
-      Ansioluettelo
-    </h1>
-    <img src="assets/EN.jpg" width="300">
+    <div class="emo">
+        <h2>
+        Ansioluettelo
+        </h2>
+        <div class="palsta">
+            <img src="assets/EN.jpg" width="250">
+        </div>
+        <div class="palsta">
+            <p>
+                Yhteystiedot:
+            </p>
+            <ul>
+                <li>puh. 555-123456</li>
+                <li>erkki.nurmi@nospam.com</li>
+            </ul>
+        </div>
+    </div>
 </body>
 
 </html>
