Add education and systems

--- a/index.html
+++ b/index.html
@@ -24,6 +24,29 @@
                 <li>erkki.nurmi@nospam.com</li>
             </ul>
         </div>
+        <p>
+            Tietoteknisesti orientoitunut yliopistokirjastolainen, ensimmäisen vuoden tietojenkäsittelytieteen opiskelija.
+        </p>
+        <p>
+            Koulutus:
+            <ul>
+                <li>Ylioppilas (1996)</li>
+                <li>Musiikin maisteri, musiikkikasvatus (2007)</li>
+                <li>Informaatiotutkimuksen perus- ja aineiopintoja 65op (2012)</li>
+                <li>Tietojenkäsittelytieteen opiskelija 2024-</li>
+            </ul>
+        </p>
+        <p>
+            Järjestelmäosaaminen:
+            <ul>
+                <li>Ex Libris Alma -palvelualusta (Administration Certification 2020)</li>
+                <li>Finna (pääkäyttäjä vuodesta 2016)</li>
+                <li>OCLC EZproxy (pääkäyttäjä vuodesta 2012)</li>
+                <li>DSpace-pääkäyttäjä vuodesta 2009</li>
+                <li>Ex Libris SFX</li>
+                <li>SoleCRIS (pääkäyttäjä vuodesta 2016)</li>
+            </ul>
+        </p>
     </div>
 </body>
 
