Finish placing colums

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="emo">
         <h2>
-        Ansioluettelo
+        Erkki Nurmi: ansioluettelo
         </h2>
         <div class="palsta">
             <img src="assets/EN.jpg" width="250">
@@ -23,16 +23,19 @@
                 <li>puh. 555-123456</li>
                 <li>erkki.nurmi@nospam.com</li>
             </ul>
+            <p>
+                Tietoteknisesti orientoitunut yliopistokirjastolainen, ensimmäisen vuoden tietojenkäsittelytieteen opiskelija.
+            </p>
         </div>
-        <p>
-            Tietoteknisesti orientoitunut yliopistokirjastolainen, ensimmäisen vuoden tietojenkäsittelytieteen opiskelija.
-        </p>
+    </div>
+    <div class="emo">
+        
         <p>
             Koulutus:
             <ul>
                 <li>Ylioppilas (1996)</li>
                 <li>Musiikin maisteri, musiikkikasvatus (2007)</li>
-                <li>Informaatiotutkimuksen perus- ja aineiopintoja 65op (2012)</li>
+                <li>Informaatiotutkimuksen perus- ja aineopintoja 65op (2012)</li>
                 <li>Tietojenkäsittelytieteen opiskelija 2024-</li>
             </ul>
         </p>
@@ -48,6 +51,7 @@
             </ul>
         </p>
     </div>
+    
 </body>
 
 </html>
