--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="palsta">
             <p>
-                Yhteystiedot:
+                <strong>Yhteystiedot:</strong>
             </p>
             <ul>
                 <li>puh. 555-123456</li>
@@ -31,7 +31,7 @@
     <div class="emo">
         
         <p>
-            Koulutus:
+            <strong>Koulutus:</strong>
             <ul>
                 <li>Ylioppilas (1996)</li>
                 <li>Musiikin maisteri, musiikkikasvatus (2007)</li>
@@ -40,7 +40,7 @@
             </ul>
         </p>
         <p>
-            Järjestelmäosaaminen:
+            <strong>Järjestelmäosaaminen:</strong>
             <ul>
                 <li>Ex Libris Alma -palvelualusta (Administration Certification 2020)</li>
                 <li>Finna (pääkäyttäjä vuodesta 2016)</li>
